--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<source src="chilled-acoustic-indie-folk-ig-version-60s-9648.mp4"type="audio/ogg">
 		</audio>
 	<h2>94.span tag</h2>
+		<p>The table color is  <span style ="color:blue"> blue </span></p>
 	<h2 style="color:red">95.strike tag{Not Support}</h2>
 	<h2>96.strong tag</h2>
 		<p>The<strong> Lion </strong> is a large cat of the genus Panthera native to Africa and India</p>
